--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,14 @@ dependencies:
   path_provider: ^2.1.3
   youtube_explode_dart: ^2.0.2
   logger: ^2.0.2
+  intl: ^0.19.0
   permission_handler: ^11.3.1
+  get: ^4.6.6
+  shared_preferences: ^2.2.0
+  simple_circular_progress_bar: ^1.0.2
+  ffmpeg_kit_flutter: ^6.0.3
+
+
 #  http: ^1.2.1
 #  flutter_ffmpeg: ^0.4.2
 
