--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   shared_preferences: ^2.2.0
   simple_circular_progress_bar: ^1.0.2
   ffmpeg_kit_flutter: ^6.0.3
-
+  desktop_window: ^0.4.0
 
 #  http: ^1.2.1
 #  flutter_ffmpeg: ^0.4.2
