--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   desktop_window: ^0.4.0
   icons_plus: ^5.0.0
   extended_image: ^8.1.1 #외부 이미지 표현
+  video_player: ^2.9.1
+  flick_video_player: ^0.9.0
 
 #  http: ^1.2.1
 #  flutter_ffmpeg: ^0.4.2
